fix broken css and link

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -105,5 +105,5 @@ hr {
 }
 
 #taglist {
-  font-size: 0.5vw;
+  font-size: 0.8vw;
 }
